# rust_docker_multistage

./: Cargo.toml  Dockerfile
src/: main.rs  model.rs  usecase.rs
