[package]
name = "webservice_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
env_logger = "0.11.3"
actix-macros = "0.2.4"
sqlx = { version = "0.7.4", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }